[package]
name = "luatalk-cli"
version = "0.1.0-alpha"
authors = ["celet-ff-io"]
edition = "2024"
rust-version = "1.95"
description = "Convert your Lua file to `luatalk::Article` structure string."
readme = "README.md"
homepage = "https://github.com/celet-ff-io/luatalk-cli"
repository = "https://github.com/celet-ff-io/luatalk-cli"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap-stdin = "0.8.1"
clap-verbosity-flag = "3.0.4"
const_format = "0.2.36"
env_logger = "0.11.10"
getset = "0.1.7"
log = "0.4.33"
miette = { version = "7.6.0", features = ["fancy"] }
mlua = { version = "0.11.6", features = [
  "anyhow",
  "lua55",
  "serde",
  "vendored",
] }
pretty_assertions = "1.4.1"
serde = { version = "1.0.228", features = ["derive"] }
tap = "1.0.1"
thiserror = "2.0.18"
typed-builder = "0.23.2"

[[bin]]
name = "luatalk"
path = "src/bin/luatalk/main.rs"

[lib]
name = "luatalk"
