[package]
name = "luatalk-cli"
version = "0.3.0-rc.4"
authors = ["celet-ff-io"]
edition = "2024"
rust-version = "1.92"
description = "Build article from Lua file."
readme = "README.md"
homepage = "https://github.com/celet-ff-io/luatalk-cli"
repository = "https://github.com/celet-ff-io/luatalk-cli"
license = "MIT OR Apache-2.0"
include = [
  "/assets",
  "/src",
  "/tests",
  "/CHANGELOG.md",
  "/about.hbs",
  "/about.toml",
  "/Cargo.lock",
  "/Cargo.toml",
  "/deny.toml",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/NOTICE",
  "/README.md",
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
clap-stdin = "0.8.1"
clap-verbosity-flag = "3.0.4"
clap_complete = "4.6.6"
config = { version = "0.15.25", default-features = false, features = [
  "convert-case",
] }
const_format = "0.2.36"
data-encoding = "2.11.0"
env_logger = "0.11.11"
getset = "0.1.7"
include-flate = "0.3.3"
json-escape = "0.3.1"
log = "0.4.33"
miette = { version = "7.6.0", features = ["fancy"] }
mime_guess = "2.0.5"
mlua = { version = "0.12.0", features = [
  "anyhow",
  "lua55",
  "serde",
  "vendored",
] }
path-clean = "1.0.1"
pretty_assertions = "1.4.1"
regex = "1.12.4"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
strfmt = "0.2.5"
strum = { version = "0.28.0", features = ["derive"] }
sys-locale = "0.3.2"
tap = "1.0.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
typed-builder = "0.23.2"
ureq = { version = "3.3.0", features = ["socks-proxy"] }
url = "2.5.8"
which = "8.0.4"
xxhash-rust = { version = "0.8.16", features = ["xxh3"] }

[[bin]]
name = "luatalk"
path = "src/bin/luatalk/main.rs"

[lib]
name = "luatalk"
